--- a/TECOCustomerchurn_prediction.ipynb
+++ b/TECOCustomerchurn_prediction.ipynb
@@ -16643,7 +16643,7 @@
    "id": "780706d3",
    "metadata": {},
    "source": [
-    "# Kesimpulan dan Saran"
+    "# Conclusion and Recommendation"
    ]
   },
   {
